Simplify rest clients (#159)
* simplify lookup

* deklarativ klient

* chore

* chore more

* chore more

* chore more

* chore more

* chore more

* chore more

* chore more

* chore more

* chore more

* spring security request intercetor in clients

* spring security request intercetor in clients

* disable SS for incoming, bruk bare ved outgoing

* log

* pretty

* chore

* norg

* log

* log

* chore

* chore

* add scope

* delt opp

* delt opp

* delt opp

* delt opp

* delt opp

* chores

* chores

* chores

* chores

* fix test

* tester

* tester

* tester

* ubrukt

* ubrukt

* ubrukt

* fix url

* chore naming

* chore naming

* chore naming

* chore

* chore

* feil filter2

* feil filter2

* feil filter2

* feil filter2

* feil filter2

* log

* log

* log

* log

* første

* test

* test

* fjernet

* slå opp inaktiv regelmessig

* slå opp inaktiv regelmessig

* log

* log

* log

* log

* log

* log

* log

* log

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* hopp over alt som feiler i cts av Ansatt

* oppdater cache etter hver page

* oppdater cache etter hver page

* oppdater cache etter hver page

* oppdater cache etter hver page

* oppdater cache etter hver page

* oppdater cache etter hver page

* log

* log

* log

* log

* log

* log

* log

* log

* log

* log

* log

* log

* log

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* som leder

* slack

* slack

*